updates to main

--- a/index.html
+++ b/index.html
@@ -32,11 +32,7 @@
         </ul>
       </ul>
       <form class="search__container">
-        <input
-          type="string"
-          class="search__bar"
-          placeholder="Search..."
-        /><button class="search__btn">Search</button>
+        <input type="string" class="search__bar" placeholder="Search..." />
       </form>
       <span class="profile__box">
         <h1 class="profile">
